# Styling and linting Configurations
[tool.bandit]
targets = [
    './provision_fsx_lustre_step_function/lambdas/',
]
exclude_dirs = [
    './tests/unit/',
    '*_test.py',
    '*/test_*.py',
    '*/test_*.py',
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py39"]

[tool.poetry]
name = "provision-fsx-lustre-step-function"
version = "0.1.0"
description = "This sample project creates a Step Function that provisions an FSx for Lustre filesystem."
authors = ["Aniket Braganza <aabragan@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.44.0"
constructs = "^10.1.116"
"aws-cdk.aws-lambda-python-alpha" = "^2.44.0-alpha.0"
moto = "^4.0.6"
docker = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
aws-lambda-powertools = "^1.29.2"
jsonpickle = "^2.2.0"
black = "^22.8.0"
isort = "^5.10.1"
bandit = {extras = ["toml"], version = "^1.7.4"}
safety = "^2.2.0"
pylint = "^2.15.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
