# Styling and linting Configurations
[tool.bandit]
targets = [
    './provision_fsx_lustre_step_function/lambdas/',
]
exclude_dirs = [
    './tests/unit/',
    '*_test.py',
    '*/test_*.py',
    '*/test_*.py',
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py39"]

[tool.poetry]
name = "provision-fsx-lustre-step-function"
version = "0.1.1"
description = "This sample project creates a Step Function that provisions an FSx for Lustre filesystem."
authors = [
    "Aniket Braganza <aabragan@amazon.com>",
    "Sowjanya Pandruju <spandruj@amazon.com>",
    "Shiv Laxminarayana <shivkmin@amazon.com>"
]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.54.0"
constructs = "^10.1.189"
"aws-cdk.aws-lambda-python-alpha" = "^2.54.0a0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
aws-lambda-powertools = "^1.31.1"
jsonpickle = "^3.0.0"
black = "^22.12.0"
isort = "^5.11.2"
bandit = {extras = ["toml"], version = "^1.7.4"}
safety = "^2.3.5"
pylint = "^2.15.8"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
cdk-nag = "^2.21.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
